fixed a image not showing bug

--- a/output.css
+++ b/output.css
@@ -854,6 +854,9 @@
   .gap-\[1\.rem\] {
     gap: 1.rem;
   }
+  .gap-\[1\=\%\] {
+    gap: 1=%;
+  }
   .gap-\[1\] {
     gap: 1;
   }
@@ -866,6 +869,9 @@
   .gap-\[1rem\] {
     gap: 1rem;
   }
+  .gap-\[2\%\] {
+    gap: 2%;
+  }
   .gap-\[2\] {
     gap: 2;
   }
@@ -877,6 +883,9 @@
   }
   .gap-\[2rem\] {
     gap: 2rem;
+  }
+  .gap-\[4\] {
+    gap: 4;
   }
   .gap-\[5\%\] {
     gap: 5%;
@@ -908,8 +917,35 @@
   .gap-\[10rem\] {
     gap: 10rem;
   }
+  .gap-\[12\%\] {
+    gap: 12%;
+  }
+  .gap-\[15\%\] {
+    gap: 15%;
+  }
   .gap-\[15rem\] {
     gap: 15rem;
+  }
+  .gap-\[17\%\] {
+    gap: 17%;
+  }
+  .gap-\[18\%\] {
+    gap: 18%;
+  }
+  .gap-\[19\%\] {
+    gap: 19%;
+  }
+  .gap-\[20\%\] {
+    gap: 20%;
+  }
+  .gap-\[40\%\] {
+    gap: 40%;
+  }
+  .gap-\[40\] {
+    gap: 40;
+  }
+  .gap-\[120\%\] {
+    gap: 120%;
   }
   .gap-\[rem\] {
     gap: rem;
